--- a/.github/workflows/self-push.yml
+++ b/.github/workflows/self-push.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Prepare custom environment variables
         run: |
           CI_BRANCH_PUSH=${{ github.event.ref }}
+          CI_BRANCH_PUSH=${CI_BRANCH_PUSH/'refs/heads/'/''}
           CI_BRANCH_WORKFLOW_RUN=${{ github.event.workflow_run.head_branch }}
           CI_SHA_PUSH=${{ github.event.head_commit.id }}
           CI_SHA_WORKFLOW_RUN=${{ github.event.workflow_run.head_sha }}
@@ -118,6 +119,7 @@ jobs:
       - name: Prepare custom environment variables
         run: |
           CI_BRANCH_PUSH=${{ github.event.ref }}
+          CI_BRANCH_PUSH=${CI_BRANCH_PUSH/'refs/heads/'/''}
           CI_BRANCH_WORKFLOW_RUN=${{ github.event.workflow_run.head_branch }}
           CI_SHA_PUSH=${{ github.event.head_commit.id }}
           CI_SHA_WORKFLOW_RUN=${{ github.event.workflow_run.head_sha }}
@@ -200,6 +202,7 @@ jobs:
       - name: Prepare custom environment variables
         run: |
           CI_BRANCH_PUSH=${{ github.event.ref }}
+          CI_BRANCH_PUSH=${CI_BRANCH_PUSH/'refs/heads/'/''}
           CI_BRANCH_WORKFLOW_RUN=${{ github.event.workflow_run.head_branch }}
           CI_SHA_PUSH=${{ github.event.head_commit.id }}
           CI_SHA_WORKFLOW_RUN=${{ github.event.workflow_run.head_sha }}
@@ -286,6 +289,7 @@ jobs:
       - name: Prepare custom environment variables
         run: |
           CI_BRANCH_PUSH=${{ github.event.ref }}
+          CI_BRANCH_PUSH=${CI_BRANCH_PUSH/'refs/heads/'/''}
           CI_BRANCH_WORKFLOW_RUN=${{ github.event.workflow_run.head_branch }}
           CI_SHA_PUSH=${{ github.event.head_commit.id }}
           CI_SHA_WORKFLOW_RUN=${{ github.event.workflow_run.head_sha }}
@@ -360,6 +364,7 @@ jobs:
       - name: Prepare custom environment variables
         run: |
           CI_BRANCH_PUSH=${{ github.event.ref }}
+          CI_BRANCH_PUSH=${CI_BRANCH_PUSH/'refs/heads/'/''}
           CI_BRANCH_WORKFLOW_RUN=${{ github.event.workflow_run.head_branch }}
           CI_SHA_PUSH=${{ github.event.head_commit.id }}
           CI_SHA_WORKFLOW_RUN=${{ github.event.workflow_run.head_sha }}
@@ -435,6 +440,7 @@ jobs:
       - name: Prepare custom environment variables
         run: |
           CI_BRANCH_PUSH=${{ github.event.ref }}
+          CI_BRANCH_PUSH=${CI_BRANCH_PUSH/'refs/heads/'/''}
           CI_BRANCH_WORKFLOW_RUN=${{ github.event.workflow_run.head_branch }}
           CI_SHA_PUSH=${{ github.event.head_commit.id }}
           CI_SHA_WORKFLOW_RUN=${{ github.event.workflow_run.head_sha }}
