--- a/.github/workflows/self-push.yml
+++ b/.github/workflows/self-push.yml
@@ -328,6 +328,7 @@ jobs:
           nvidia-smi
 
       - name: Environment
+        working-directory: /workspace/transformers
         run: |
           python utils/print_env.py
 
