--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,10 @@ tags
 
 # DS_Store (MacOS)
 .DS_Store
+
+# model
+*.bin
+*/wandb/*
+*.csv
+_faza_fine-tuning/wandb/*
+src/fact_factcc/factcc-checkpoint/*
